[package]
name = "rtti-derive"
version = "0.2.0"
authors = ["Dennis Möhlmann <dmo479@gmail.com>"]
description = "[very early WIP] Procedural macro to derive RTTI trait. See crate rtti."
documentation = "https://docs.rs/rtti/"
repository = "https://github.com/sinesc/rtti-derive.git"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.12.13"
quote = "0.4.2"
proc-macro2 = "0.2.2"